# datamerger

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  format-code.sh
.github/workflows/: ci.yml
src/: CMakeLists.txt  ColumnMap.cpp  ColumnMap.h  DataMap.cpp  DataMap.h  DataMergerApp.cpp  DataMergerApp.h  datamerger.cpp
tests/: CMakeLists.txt  ColumnMapTest.cpp  DataMapTest.cpp  DataMergerAppTest.cpp  test1-input1.csv  test1-input2.csv  test1-output.csv  test2-input1.csv  test2-input2.csv  test2-input3.csv  test2-output.csv
